small change of Model Manager

--- a/coredev/ModelManager.ipynb
+++ b/coredev/ModelManager.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tkddj\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import os\n",
@@ -29,20 +20,30 @@
     "class ModelManager:\n",
     "    def __init__(self, directory, tf_input, tf_output):\n",
     "        self.input = tf_input\n",
-    "        self.datagen = tf.keras.preprocessing.image.ImageDataGenerator(rescale = 1./255)\n",
+    "        self.datagen = tf.keras.preprocessing.image.ImageDataGenerator(rescale = 1./255,samplewise_std_normalization=True, samplewise_center=True)\n",
     "        self.data_iter = self.datagen.flow_from_directory(directory, target_size=(int(self.input.shape[0]),int(self.input.shape[1])), batch_size=50, save_format='jpeg', shuffle=False)\n",
     "        \n",
     "    def __init__(self, directory, classes, input_size=(256,256), batch_size=50):\n",
     "        # directories and classses\n",
-    "        self.datagen = tf.keras.preprocessing.image.ImageDataGenerator(rescale= 1./255)\n",
+    "        self.datagen = tf.keras.preprocessing.image.ImageDataGenerator(rescale= 1./255, samplewise_std_normalization=True, samplewise_center=True)\n",
     "        self.data_iter = self.datagen.flow_from_directory(directory, target_size=input_size, batch_size=50, save_format='jpeg', shuffle=False)\n",
     "        self.input_label = tf.placeholder(dtype=tf.float32, shape=[None, classes], name='model_manager_label')\n",
     "        self.input = tf.placeholder(dtype=tf.float32, shape=[None], name='model_manager_input')\n",
     "        \n",
+    "        last_layer = _predefined_model()\n",
     "        \n",
-    "    def predefined_model():\n",
-    "        return False # just \n",
-    "    "
+    "    def _predefined_model():\n",
+    "        self.flat = None\n",
+    "        self.fc1 = tf.layers.dense(inputs=self.flat, units=120, activation=tf.nn.relu)\n",
+    "        self.fc2 = tf.layers.dense(inputs=self.fc1, units=3, activation=tf.nn.relu)\n",
+    "        return self.fc2\n",
+    "    def set_custom_model(full_connected):\n",
+    "        self.fc = full_connected\n",
+    "        self.prediction = tf.nn.softmax(self.fc)\n",
+    "        \n",
+    "    def Train_model():\n",
+    "        return False\n",
+    "        "
    ]
   },
   {
@@ -69,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
