data validation check added.

--- a/src/xyztoRGB.ipynb
+++ b/src/xyztoRGB.ipynb
@@ -38,18 +38,35 @@
     "from multiprocessing import Pool\n",
     "class data_preprocessing():\n",
     "    '''\n",
-    "    **Fileds**\n",
-    "    _user : \n",
-    "    _passwd :\n",
-    "    _port :\n",
-    "    _addr :\n",
-    "    _dbname :\n",
-    "    _client :\n",
+    "    Currently, It only extracts the FFT image feature for each acceleration.(2019-04-04)\n",
+    "    Other feature extraction method can be added.\n",
     "    \n",
-    "    **Methods**\n",
+    "    This class uses multiprocessing module.\n",
+    "    Prefix multi_ means that this function uses Pool from multiprocessing\n",
+    "    Prefix single_ means that this function is allocated to process of multi_ functions.\n",
     "    \n",
+    "    2 underscores(__) both sides of function's name means it's not recommended to be called directly.\n",
+    "    If it's called directly, error handling , closing Pool and validation of returns are not guaranteed.\n",
+    "    \n",
+    "    \n",
+    "    Fields:\n",
+    "    _user: InfluxDB user name\n",
+    "    _port: InfluxDB port\n",
+    "    _passwd: InfluxDB database password\n",
+    "    _addr: InfluxDB address\n",
+    "    _dbname: InfluxDB database name\n",
+    "    _client: instance of InfluxDBClient, which has informations above.\n",
     "    '''\n",
     "    def __init__(self, addr, port, username, passwd, dbname):\n",
+    "        '''\n",
+    "        Fields:\n",
+    "        _user: InfluxDB user name\n",
+    "        _port: InfluxDB port\n",
+    "        _passwd: InfluxDB database password\n",
+    "        _addr: InfluxDB address\n",
+    "        _dbname: InfluxDB database name\n",
+    "        _client: instance of InfluxDBClient, which has informations above.\n",
+    "        '''\n",
     "        self._user = username\n",
     "        self._port = port\n",
     "        self._passwd = passwd\n",
@@ -126,8 +143,8 @@
     "        # parameter validation check and correction.\n",
     "        if dev_id == None:\n",
     "            dev_id = self.get_dev_ids()\n",
-    "        if all(isinstance(dev_id, str) for dev in dev_id) == False:\n",
-    "            pattern = re.compile('[0-9][0-9][0-9][0-9]')\n",
+    "        elif all(isinstance(dev_id, str) for dev in dev_id) == False:\n",
+    "            pattern = re.compile('[0-9][0-9][0-9][0-9]') # Regular expression which accepts string which contains 4 numbers like 0000, 0123, 1430.\n",
     "            for i in range(len(dev_id)):\n",
     "                if type(dev_id[i]) is int:\n",
     "                    dev_id[i] = '{:0>4}'.format(dev_id[i])\n",
@@ -149,18 +166,21 @@
     "                              ,dev_id))\n",
     "        \n",
     "        return query_list\n",
-    "    def multi_query_process(self, query_list, num_Proc=5):\n",
+    "    def multi_read_from_DB(self, query_list, num_Proc=8, valid_check=True):\n",
     "        '''\n",
     "        It's for reading data and save images with multiprocessing.\n",
     "        \n",
-    "        num_Proc : The number of processes in Pool. Default is 5\n",
-    "        query_list : \n",
+    "        num_Proc : The number of processes in Pool. Default is 8\n",
+    "        query_list : List of query to request. Recommended to use data_preprocessing.make_multi_query_list()\n",
+    "        \n",
     "        '''\n",
     "        query_pool = Pool(num_Proc)\n",
-    "        df_list = query_pool.map(self.read_from_DB, query_list) # Error handling must be needed.\n",
+    "        df_list = query_pool.map(self.__single_read_from_DB__, query_list) # Error handling must be needed.\n",
+    "        if valid_check:\n",
+    "            df_list = self.__multi_data_valid_check__(df_list=df_list, proc_pool=query_pool)\n",
     "        query_pool.close()\n",
     "        return df_list\n",
-    "    def read_from_DB(self, query=None):\n",
+    "    def __single_read_from_DB__(self, query=None):\n",
     "        '''\n",
     "        This method is for reading data from InfluxDB described in self._client\n",
     "        Need 1 parameter, query.\n",
@@ -195,6 +215,70 @@
     "        dev_result = self._client.query('show series')\n",
     "        dev_ids = list(map(lambda x: x[0].split('=')[1], dev_result.raw['series'][0]['values']))\n",
     "        return dev_ids\n",
+    "    def __single_data_valid_check__(self, df):\n",
+    "        valid = True\n",
+    "        if(len(df) <= 2):\n",
+    "            print('Data which device send has too small data')\n",
+    "            return False\n",
+    "        try:\n",
+    "            for i in range(1, 60000):\n",
+    "                if df['time'][i] - df['time'][i - 1] >=20:\n",
+    "                    print('invalid time gap:{} dropped.'.format(df['dev_id'][0]))\n",
+    "                    return False\n",
+    "            if valid:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "        except IndexError:\n",
+    "            print(df['dev_id'][0], 'Index error. It might have insufficient data.')\n",
+    "            return False\n",
+    "    \n",
+    "    def __multi_data_valid_check__(self, df_list, proc_pool):\n",
+    "        '''\n",
+    "        Check data if it's valid.\n",
+    "        '''\n",
+    "        df_valid_l = proc_pool.map(self.__single_data_valid_check__, df_list)\n",
+    "        i = 0\n",
+    "        for nth, valid in enumerate(df_valid_l):\n",
+    "            if valid == False:\n",
+    "                df_list.pop(nth - i)\n",
+    "                i += 1\n",
+    "        return df_list\n",
+    "    \n",
+    "    def multi_save_images(self, df_list, fs=100, NFFT=None,save_dir='.', num_Proc=4):\n",
+    "        '''\n",
+    "        Save FFT heatmap images for each device.\n",
+    "        '''\n",
+    "        save_pool = Pool(num_Proc)\n",
+    "        param = list(map(lambda df: [df, fs, NFFT, save_dir], df_list))\n",
+    "        save_pool.starmap(self.__single_save_image__, param)\n",
+    "        save_pool.close()\n",
+    "    \n",
+    "    def __single_save_image__(self, data, fs=100, NFFT=None,save_dir='.'):\n",
+    "        filename,x,y,z,t = data['dev_id'][0], data['x'], data['y'], data['z'], data['time']\n",
+    "        x = x - np.mean(x) # Extracted by the mean\n",
+    "        y = y - np.mean(y)\n",
+    "        z = z - np.mean(z)\n",
+    "        t = (t-t[0])/1000 # Convert timestamp to [s]\n",
+    "        \n",
+    "        if NFFT == None:\n",
+    "            NFFT = 2*fs # Number of samples used in each window for FFT. We set two seconds window.\n",
+    "        else:\n",
+    "            NFFT = NFFT\n",
+    "        plt.close('all') # clearing current figures.\n",
+    "        ax = self.__create_fft_plot__(fs, NFFT, x, t)\n",
+    "        ay = self.__create_fft_plot__(fs, NFFT, y, t)\n",
+    "        az = self.__create_fft_plot__(fs, NFFT, z, t)\n",
+    "        x_img = self.__ax_to_ndarray__(ax)[:,:,0]\n",
+    "        y_img = self.__ax_to_ndarray__(ay)[:,:,0]\n",
+    "        z_img = self.__ax_to_ndarray__(az)[:,:,0]\n",
+    "        RGB_xyz = np.zeros(shape=[x_img.shape[0], x_img.shape[1], 3])\n",
+    "        RGB_xyz[:, :, 0] = x_img\n",
+    "        RGB_xyz[:, :, 1] = y_img\n",
+    "        RGB_xyz[:, :, 2] = z_img\n",
+    "        RGB_xyz = (RGB_xyz*255).astype('uint8')\n",
+    "        cv2.imwrite(save_dir + '/' + filename +'.png', RGB_xyz)\n",
+    "        plt.close('all') # avoid memory leak\n",
     "    \n",
     "    '''\n",
     "    ***************************************************\n",
@@ -216,48 +300,8 @@
     "        \n",
     "        \n",
     "        return False # it will be substituted later.\n",
-    "    def __data_valid_check__(self, df_list):\n",
-    "        '''\n",
-    "        time gap > 20msec --> incorrect\n",
-    "        indexerror --> insufficient data.\n",
-    "        \n",
-    "        '''\n",
-    "        return False\n",
     "    \n",
-    "    def save_multi_images(self, df_list, fs=100, NFFT=None,save_dir='.', num_Proc=4):\n",
-    "        '''\n",
-    "        Save FFT heatmap images for each device.\n",
-    "        '''\n",
-    "        save_pool = Pool(num_Proc)\n",
-    "        param = list(map(lambda df: [df, fs, NFFT], df_list))\n",
-    "        save_pool.starmap(self.__save_single_image__, param)\n",
-    "        save_pool.close()\n",
-    "    \n",
-    "    def __save_single_image__(self, data, fs=100, NFFT=None,save_dir='.'):\n",
-    "        filename,x,y,z,t = data['dev_id'][0], data['x'], data['y'], data['z'], data['time']\n",
-    "        x = x - np.mean(x) # Extracted by the mean\n",
-    "        y = y - np.mean(y)\n",
-    "        z = z - np.mean(z)\n",
-    "        t = (t-t[0])/1000 # Convert timestamp to [s]\n",
-    "        \n",
-    "        if NFFT == None:\n",
-    "            NFFT = 2*fs # Number of samples used in each window for FFT. We set two seconds window.\n",
-    "        else:\n",
-    "            NFFT = NFFT\n",
-    "        plt.close('all') # clearing current graphs\n",
-    "        ax = self.__create_fft_plot__(fs, NFFT, x, t)\n",
-    "        ay = self.__create_fft_plot__(fs, NFFT, y, t)\n",
-    "        az = self.__create_fft_plot__(fs, NFFT, z, t)\n",
-    "        x_img = self.__ax_to_ndarray__(ax)[:,:,0]\n",
-    "        y_img = self.__ax_to_ndarray__(ay)[:,:,0]\n",
-    "        z_img = self.__ax_to_ndarray__(az)[:,:,0]\n",
-    "        RGB_xyz = np.zeros(shape=[x_img.shape[0], x_img.shape[1], 3])\n",
-    "        RGB_xyz[:, :, 0] = x_img\n",
-    "        RGB_xyz[:, :, 1] = y_img\n",
-    "        RGB_xyz[:, :, 2] = z_img\n",
-    "        RGB_xyz = (RGB_xyz*255).astype('uint8')\n",
-    "        cv2.imwrite(save_dir + '/' + filename +'.png', RGB_xyz)\n",
-    "        plt.close('all') # avoid memory leak"
+    "    "
    ]
   },
   {
@@ -284,6 +328,7 @@
    "outputs": [],
    "source": [
     "timespan=('now() - 2h', 'now()')\n",
+    "dev_ids=['0025','0071','0086']\n",
     "limit=60000\n",
     "qry_list = test_class.make_multi_query(timespan=timespan, dev_id=None, limit=limit)"
    ]
@@ -297,14 +342,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:00:40.254546\n"
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "invalid time gap:0060 dropped.\n",
+      "Data which device send has too small data\n",
+      "invalid time gap:0033 dropped.\n",
+      "Data which device send has too small data\n",
+      "invalid time gap:0016 dropped.\n",
+      "invalid time gap:0055 dropped.\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "invalid time gap:0227 dropped.\n",
+      "invalid time gap:0254 dropped.\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "invalid time gap:0270 dropped.\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "invalid time gap:0259 dropped.\n",
+      "invalid time gap:0279 dropped.\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "invalid time gap:0253 dropped.\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "Data which device send has too small data\n",
+      "invalid time gap:0264 dropped.\n",
+      "Data which device send has too small data\n",
+      "0:01:02.298473\n"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
     "    start = datetime.now()\n",
-    "    df_list = test_class.multi_query_process(query_list=qry_list, num_Proc=16)\n",
+    "    df_list = test_class.multi_read_from_DB(query_list=qry_list, num_Proc=16, valid_check=True)\n",
     "    end = datetime.now()\n",
     "\n",
     "    print(end - start)"
@@ -312,11 +404,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_class.save_multi_images(df_list=df_list, fs=100, NFFT=200, num_Proc=16)"
+    "ids = test_class.get_dev_ids()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_class.multi_save_images(df_list=df_list, fs=100, NFFT=200, num_Proc=16, save_dir='../../Imgdata')"
    ]
   },
   {
@@ -330,42 +431,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2019, 4, 3, 15, 53, 11, 91384)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0:00:00.000053\n"
-     ]
-    }
-   ],
    "source": []
   },
   {
