save_df2npy added

--- a/src/xyztoRGB.ipynb
+++ b/src/xyztoRGB.ipynb
@@ -281,11 +281,24 @@
     "        plt.close('all') # avoid memory leak\n",
     "    \n",
     "    '''\n",
+    "    ************************************************************\n",
+    "    Other Utilities.\n",
+    "    '''\n",
+    "    def save_df2npy(self, df_list):\n",
+    "        '''\n",
+    "        convert DataFrame to .npy file\n",
+    "        each column represents ['dev_id', 'x', 'y', 'z', 'timestamp']\n",
+    "        '''\n",
+    "        for df in df_list:\n",
+    "            np.save('{}.npy'.format(df['dev_id'][0]), df.values)\n",
+    "    \n",
+    "    '''\n",
     "    ***************************************************\n",
     "    Prototypes\n",
     "    '''\n",
     "    \n",
     "    \n",
+    "            \n",
     "    def __read_from_dir_csv__(self, data_dir='.'):\n",
     "        '''\n",
     "        This method depict that object could get data from file system where python program is located.\n",
@@ -330,7 +343,7 @@
     "timespan=('now() - 2h', 'now()')\n",
     "dev_ids=['0025','0071','0086']\n",
     "limit=60000\n",
-    "qry_list = test_class.make_multi_query(timespan=timespan, dev_id=None, limit=limit)"
+    "qry_list = test_class.make_multi_query(timespan=timespan, dev_id=dev_ids, limit=limit)"
    ]
   },
   {
@@ -342,54 +355,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "invalid time gap:0060 dropped.\n",
-      "Data which device send has too small data\n",
-      "invalid time gap:0033 dropped.\n",
-      "Data which device send has too small data\n",
-      "invalid time gap:0016 dropped.\n",
-      "invalid time gap:0055 dropped.\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "invalid time gap:0227 dropped.\n",
-      "invalid time gap:0254 dropped.\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "invalid time gap:0270 dropped.\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "invalid time gap:0259 dropped.\n",
-      "invalid time gap:0279 dropped.\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "invalid time gap:0253 dropped.\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "Data which device send has too small data\n",
-      "invalid time gap:0264 dropped.\n",
-      "Data which device send has too small data\n",
-      "0:01:02.298473\n"
+      "0:00:17.269600\n"
      ]
     }
    ],
@@ -404,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,14 +400,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_arr = df_list[0].values\n",
+    "from tempfile import TemporaryFile\n",
+    "outfile = TemporaryFile()\n",
+    "np.save('test_set.npy', test_arr)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = np.load('test_set.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_class.save_df2npy(df_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "InfluxDBClient(host='155.230.28.170', port=8086,username='sslab', password='1231',database='kmaeq')"
+   ]
   }
  ],
  "metadata": {
